# radio3-stm32

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.4.10-pre1  CMakeLists.txt.user.4.9-pre1  buildid-updater.sh  default.jdebug  gdbserver.sh  lib_stm32  load_flash.jlink  run.jdebug  stm32f103c8.cmake  stm32f103c8t6_flash.ld  upload.sh
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  radio3.elf  radio3.hex  radio3.map  radio3_stm32.cbp
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake  radio3.elf  radio3.hex  radio3.map  radio3_stm32.cbp
build.old/: CMakeCache.txt  Makefile  cmake_install.cmake  radio3.elf  radio3.hex  radio3.map  radio3_stm32.cbp
build_archive/: radio3-sq6dgt.hex
config/: openocd.cfg  usbscarab2.cfg  write-flash.cfg  write-ram.cfg
doc/: radio3-dokumentacja.odt  wycena.ods
include/: ad985x.h  adc.h  board.h  buildid.h  crc.h  datalink.h  delay.h  dwt.h  fmeter.h  iodev.h  iodev_usart.h  led.h  radio3.h  usart.h  vfo.h
include/usb/: board_def.h  board_usb_def.h  error.h  irq.h  usb_def.h  usbd_api.h  usbd_callbacks.h  usbd_error.h
ldscripts/: sections.ld
lib/debug/: log.cpp  log.h  swo.c  swo.cpp  swo.h
lib/io/: ComDevice.cpp  ComDevice.h  InOut.cpp  InOut.h  InOutDevice.cpp  InOutDevice.h
lib/timer/: Timer.cpp  Timer.h
lib/usb/: usbd_configure.cpp  usbd_core.cpp  usbd_interrupt.cpp  usbd_main.h
lib/usb/include/: usbd_api.h  usbd_callbacks.h  usbd_core.h  usbd_error.h
lib/usb/src/: usbd_api.cpp  usbd_configure.cpp  usbd_core.cpp  usbd_error.cpp  usbd_interrupt.cpp  usbd_main.cpp  usbd_vcom_iodev.cpp
lib/usb_fs_driver/: UsbDevice.cpp  UsbDevice.h  usb_core.cpp  usb_core.h  usb_def.h  usb_init.cpp  usb_init.h  usb_int.cpp  usb_int.h  usb_lib.h  usb_mem.c  usb_mem.cpp  usb_mem.h  usb_regs.cpp  usb_regs.h  usb_sil.cpp  usb_sil.h
lib/usb_vcom/: UsbVCom.cpp  UsbVCom.h  hw_config.c  hw_config.cpp  hw_config.h  main.cpp  platform_config.h  stm32_it.cpp  usb_conf.h  usb_desc.cpp  usb_desc.h  usb_istr.c  usb_istr.cpp  usb_istr.h  usb_it.c  usb_prop.cpp  usb_prop.h  usb_pwr.c  usb_pwr.cpp  usb_pwr.h
license/: crypt.h  license.h  license_sq6dgt.cpp
setup/win/: stmcdc.inf
setup/windows/: instalacja portu com.txt  stmcdc.inf
src/: Ad985x.cpp  Ad985x.h  AdcProbes.cpp  AdcProbes.h  Board.cpp  Board.h  Crc8.cpp  Crc8.h  DataLink.cpp  DataLink.h  FreqMeter.cpp  FreqMeter.h  Radio3.cpp  Radio3.h  Sweep.cpp  Sweep.h  Vfo.h  ad985x.c  ad985x.cpp  adc.c  adc.cpp  adc.h  board.c  board.cpp  board.h  buildid.h  crc.c  crc.cpp  crc.h  datalink.c  datalink.cpp  delay.cpp  delay.h  dwt.c  error.c  fMeter.cpp  fMeter.h  fmeter.c  fmeter.cpp  fmeter.h  (+11 more)
src/usb/: boot_10x.c  ex_com_dev.c  iodev_usb_vcom.c  usbd_api.c  usbd_api_aaa.c  usbd_configure.c  usbd_configure_103.c  usbd_core.c  usbd_error.cpp  usbd_interrupt.c  usbd_interrupt_aaa.c  usbd_main.c  usbd_power_dummy.c  usbd_vcom_iodev.c
system/include/cmsis/: cmsis_gcc.h  stm32f10x.h
system/src/cmsis/: vectors_stm32f10x.c
system/src/newlib/: _cxx.cpp  _sbrk.c  _startup.c  _syscalls.c
usb-old/: irq.h  usb_def.h  usb_regs.h  usbd_api.cpp  usbd_api.h  usbd_callbacks.h  usbd_configure.cpp  usbd_configure.h  usbd_core.h  usbd_main.cpp  usbd_vcom_iodev.cpp
